# django-hook

./: .coveragerc  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
django_hook/: __init__.py  core.py  decorators.py  registry.py  utils.py
django_hooks/: core.py  decorators.py  registry.py
tests/: conftest.py  settings.py  test_django_hooks.py
